--- a/machiavelli/templates/machiavelli/game_list_active.html
+++ b/machiavelli/templates/machiavelli/game_list_active.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load game_icons %}
+{% load stars %}
 
 {% block head_title %}
 {% blocktrans %}Ongoing games{% endblocktrans %}
@@ -26,6 +27,8 @@
 </div>
 {% endif %}
 <dl>
+<dt>{% trans "Average score" %}</dt><dd>{{ game.get_average_score|score_stars }}</dd>
+<dt>{% trans "Average karma" %}</dt><dd>{{ game.get_average_karma|karma_stars }}</dd>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Cities to win" %}</dt><dd>{{ game.cities_to_win }}</dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ game.get_season_display }}, {{ game.year }} - {{ game.get_phase_display }}</dd>
