--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load game_icons %}
+{% load stars %}
 
 {% block head_title %}
 {% blocktrans %}Ongoing games{% endblocktrans %}
@@ -34,6 +35,8 @@
 </div>
 {% endif %}
 <dl>
+<dt>{% trans "Average score" %}</dt><dd>{{ player.game.get_average_score|score_stars }}</dd>
+<dt>{% trans "Average karma" %}</dt><dd>{{ player.game.get_average_karma|karma_stars }}</dd>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario player.game.scenario.pk %}">{{ player.game.scenario.title }}</a></dd>
 <dt>{% trans "Cities to win" %}</dt><dd>{{ player.game.cities_to_win }}</dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ player.game.get_season_display }}, {{ player.game.year }} - {{ player.game.get_phase_display }}</dd>
