--- a/machiavelli/templates/machiavelli/game_list_pending.html
+++ b/machiavelli/templates/machiavelli/game_list_pending.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load game_icons %}
+{% load stars %}
 
 {% block head_title %}
 {% blocktrans %}Pending games{% endblocktrans %}
@@ -45,6 +46,8 @@
 <img src="{{ MEDIA_URL }}maps/thumbnails/scenario-{{ game.scenario.pk }}.jpg" />
 </div>
 <dl>
+<dt>{% trans "Average score" %}</dt><dd>{{ game.get_average_score|score_stars }}</dd>
+<dt>{% trans "Average karma" %}</dt><dd>{{ game.get_average_karma|karma_stars }}</dd>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Cities to win" %}</dt><dd>{{ game.cities_to_win }}</dd>
 <dt>{% trans "Time limit" %}</dt><dd>{{ game.get_time_limit_display }}</dd>
