added storm icon to rule icons and to storm events

--- a/machiavelli/media/machiavelli/css/game.css
+++ b/machiavelli/media/machiavelli/css/game.css
@@ -297,6 +297,10 @@ tr.closed_game a{
 	background-image: url('../img/surrender-event.png');
 }
 
+#log li.storm-event {
+	background-image: url('../img/storm-event.png');
+}
+
 #diplomacy a {
 	text-decoration: none;
 }
