--- a/machiavelli/templates/machiavelli/hall_of_fame.html
+++ b/machiavelli/templates/machiavelli/hall_of_fame.html
@@ -16,7 +16,8 @@ server{% endblocktrans %}</p>
 	<tr>
 	<th colspan=2>{% trans "User" %}</th>
 	<th>{% trans "Karma" %}</th>
-	<th>{% trans "Score" %}</th>
+	<th>{% trans "Ranking score" %}</th>
+	<th>{% trans "Total score" %}</th>
 	<th>{% trans "Details" %}</th>
 	</tr>
 	</thead>
@@ -25,6 +26,7 @@ server{% endblocktrans %}</p>
 	<td>{% avatar p.user %}</td>
 	<td><a href="{% url profile_detail username=p.user.username %}">{{ p }}</a></td>
 	<td>{{ p.karma|karma_stars }}</td>
+	<td class="data_c">{{ p.weighted_score }}</td>
 	<td class="data_c">
 	{% if p.total_score %}
 		{{ p.total_score|score_stars }} ({{ p.total_score }})
