--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -58,7 +58,7 @@
 	<ul>
 	{% for p in joinable_game.player_set.all %}
 		{% if p.user %}
-		<li>{{ p.user.username }}</li>
+		<li><a href="{% url profile_detail username=p.user.username %}">{{ p.user.username }}</a></li>
 		{% endif %}
 	{% endfor %}
 	</ul>
