--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -314,6 +314,8 @@ ul#messages li {
 .game_info h2 {
 	background: #191919;
 	width: 100%;
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
 
 .game_info.fast h2 {
