show average score per game in user profile

--- a/condottieri_profiles/templates/condottieri_profiles/profile_detail.html
+++ b/condottieri_profiles/templates/condottieri_profiles/profile_detail.html
@@ -38,6 +38,8 @@
 <dd>{{ profile.total_score|score_stars }} ({{ profile.total_score }}
 <a href="{% url ranking "user" profile.user.username %}">{% trans "Detail" %}</a>)
 </dd>
+<dt>{% trans "Average points per game" %}</dt>
+<dd>{{ profile.average_score }}</dd>
 <dt>{% trans "Ranking score" %}</dt>
 <dd>{{ profile.weighted_score }}</dd>
 <dt>{% trans "Times overthrown" %}</dt>
