--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -81,7 +81,7 @@
 	{% if p.conqueror %}
 		({{ p.conqueror.country }})
 	{% endif %}
-	{% if p.excommunicated %}
+	{% if p.is_excommunicated %}
 	<img src="{{ STATIC_URL }}machiavelli/img/excommunication-icon-16.png" />
 	{% endif %}
 	</div>
@@ -100,9 +100,14 @@
 		<a href="{% url lend game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/coin.png" title="{% trans "Give money" %}" /></a>
 	{% endif %}
 	{% if can_excommunicate %}
-		{% ifnotequal p.excommunicated 1 %}
+		{% ifnotequal p.is_excommunicated 1 %}
 		<a href="{% url excommunicate game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/excommunication-icon-16.png" title="{% trans "Excommunicate" %}" /></a>
 		{% endifnotequal %}
+	{% endif %}
+	{% if can_forgive %}
+		{% ifequal p.is_excommunicated 1 %}
+		<a href="{% url forgive-excommunication game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/forgive-icon-16.png" title="{% trans "Forgive" %}" /></a>
+		{% endifequal %}
 	{% endif %}
 	</div>
 	{% endifnotequal %}
@@ -112,9 +117,6 @@
 	</div>
 	{% endif %}
 {% endfor %}
-{% if can_excommunicate %}
-	<a href="{% url reset-excommunications game.slug %}">{% trans "Forgive excommunications" %}</a>
-{% endif %}
 
 {% else %} {# show only the user names of the players #}
 	{% if show_users %}
