added info about special units icons to the help section

--- a/condottieri_help/templates/condottieri_help/index.html
+++ b/condottieri_help/templates/condottieri_help/index.html
@@ -58,6 +58,7 @@
 <p>{% blocktrans %}If the time limit is reached and you have not played this phase, either you will not place new units (if you could place them) or some of your units will be disbanded. The newest units will be disbanded first.{% endblocktrans %}</p>
 <h3>{% trans "Special units" %}</h3>
 <p>{% blocktrans %}If "special units" are enabled in a game, you can build a unit with some special features, and that is more expensive than a regular unit. The types of special units that you can build depend on your country. You can never build a new special unit if you already have one. However, you could have more than one of this units if you bribe a special unit of other player.{% endblocktrans %}
+<p>{% blocktrans %} In the board, special stronger units are marked with a red star, and special loyaler units are marked with two yellow coins.{% endblocktrans %}</p>
 <p>{% blocktrans %}Available special units (and regular units) are summarized in the following table.{% endblocktrans %}</p>
 <table>
 <thead>
