--- a/machiavelli/templates/machiavelli/orders_actions.html
+++ b/machiavelli/templates/machiavelli/orders_actions.html
@@ -82,7 +82,11 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 {% if current_expenses %}
 <h3>{% trans "Your expenses for this turn" %}</h3>
 <ul>
-{{ current_expenses|unordered_list }}
+{% for e in current_expenses %}
+<li id="expense_{{ e.id }}">{{ e }}
+(<a href="{% url undo-expense game.slug e.id %}">{% trans "Delete" %}</a>)
+</li>
+{% endfor %}
 </ul>
 {% endif %}
 </div>
