added expenses confirmation system

--- a/machiavelli/templates/machiavelli/expenses_actions.html
+++ b/machiavelli/templates/machiavelli/expenses_actions.html
@@ -71,7 +71,9 @@
 <ul>
 {% for e in current_expenses %}
 <li id="expense_{{ e.id }}">{{ e }}
+{% ifequal e.confirmed 0 %}
 (<a href="{% url undo-expense game.slug e.id %}">{% trans "Delete" %}</a>)
+{% endifequal %}
 </li>
 {% endfor %}
 </ul>
