--- a/machiavelli/templates/machiavelli/orders_actions.html
+++ b/machiavelli/templates/machiavelli/orders_actions.html
@@ -84,7 +84,9 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 <ul>
 {% for e in current_expenses %}
 <li id="expense_{{ e.id }}">{{ e }}
+{% ifequal e.confirmed 0 %}
 (<a href="{% url undo-expense game.slug e.id %}">{% trans "Delete" %}</a>)
+{% endifequal %}
 </li>
 {% endfor %}
 </ul>
