--- a/machiavelli/templates/machiavelli/game_list_active.html
+++ b/machiavelli/templates/machiavelli/game_list_active.html
@@ -31,6 +31,7 @@
 <dt>{% trans "Average karma" %}</dt><dd>{{ game.get_average_karma|karma_stars }}</dd>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Cities to win" %}</dt><dd>{{ game.cities_to_win }}</dd>
+<dt>{% trans "Time limit" %}</dt><dd>{{ game.get_time_limit_display }}</dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ game.get_season_display }}, {{ game.year }} - {{ game.get_phase_display }}</dd>
 <dt>{% trans "Players" %}</dt>
 <dd>
