--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -195,18 +195,42 @@ ol, ul {
 	text-align: center;
 }
 
-#messages {
-	line-height: 150%;
-	background: #ff9090;
-	color: #333;
-}
+/* MESSAGES */
 
-#messages a {
-	color: #333;
+ul#messages {
+    margin: 0 0 10px 0;
+    padding: 0;
+    list-style: none;
 }
-
 ul#messages li {
-	list-style-type: none;
+    padding: 5px 10px;
+    margin: 3px;
+	line-height: 150%;
+	color: #333;
+}
+ul#messages li a {
+    float: right;
+    color: #693;
+}
+ul#messages .debug {
+    background: #EEE;
+    border: 1px solid #BBB;
+}
+ul#messages .info {
+    background: #DEF;
+    border: 1px solid #9BC;
+}
+ul#messages .success {
+    background: #EFD;
+    border: 1px solid #BC9;
+}
+ul#messages .warning {
+    background: #FED;
+    border: 1px solid #CB9;
+}
+ul#messages .error {
+    background: #FDD;
+    border: 1px solid #C99;
 }
 
 #footer {
