added 'Contribute' section

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -41,6 +41,7 @@
 			{% endif %}
 			<li id="tab_forum"><a href="{% url forum_index %}">{% trans "Forum" %}</a></li>
 			<li id="tab_help"><a href="{% url help-index %}">{% trans "Help" %}</a></li>
+			<li id="tab_contribute"><a href="{% url help-contribute %}">{% trans "Contribute" %}</a></li>
         {% endspaceless %}</ul>
 {% endblock %}
 
