--- a/media/css/site_tabs.css
+++ b/media/css/site_tabs.css
@@ -6,6 +6,7 @@ body.profile #tab_profile a,
 body.notices #tab_notices a,
 body.forum #tab_forum a,
 body.help #tab_help a
+body.contribute #tab_contribute a
 {
     color: #fff; /* selected tab text colour */
 }
@@ -15,6 +16,7 @@ body.profile #tab_profile,
 body.notices #tab_notices,
 body.forum #tab_forum,
 body.help #tab_help
+body.contribute #tab_contribute
 {
     margin: 0 0 1px; /* to compensate for border */
     padding: 5px 0 5px;
